# SciStanPy

./: .gitignore  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  build.yml  conda.yml  conf.py  demo.ipynb  index.rst  pipless-conda.yml  pyproject.toml  sandbox.ipynb  setup.py
amlt_configs/: cmds-small.txt  dset_combos.txt  dsets.txt  hmc.yml  hmc_pdz.yml  hmc_trpb.yml  map.yml  map_pdz.yml  map_trpb.yml  mle.yml  run_hmc_job-specific.sh  run_hmc_job.sh  run_map_job.sh
dms_stan/: __init__.py  constant.py  custom_types.py  defaults.py  exceptions.py  flip_data_analysis.py  flip_dsets.py  flip_models.md  growth_models.py  model.py  modeling.py  models.md  operations.py  param.py  plotting.py  prior_predictive.py  pytorch.py  stan.py  trpB.md  utils.py
dms_stan/datasets/: __init__.py  pdz3.py  trpb.py
dms_stan/model/: __init__.py  components.py  dms_stan_model.py  enrichment.py  map.py  map_.py  mle.py  model.py  nn_module.py  prior_predictive.py  pytorch.py  stan.py
dms_stan/pipelines/: approximate_map_flip.py  mcmc_flip.py  mle_flip.py  run_delayed_mcmc.py
dms_stan/plotting/: __init__.py  prior_predictive.py
docs/: .buildinfo  count_models.md  genindex.html  growth_models.md  index.html  installation.rst  key_concepts.rst  objects.inv  py-modindex.html  quickstart.rst  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/_autosummary/: scistanpy.custom_types.rst  scistanpy.defaults.rst  scistanpy.exceptions.rst  scistanpy.model.components.abstract_model_component.rst  scistanpy.model.components.constants.Constant.rst  scistanpy.model.components.constants.rst  scistanpy.model.components.custom_distributions.custom_scipy_dists.rst  scistanpy.model.components.custom_distributions.custom_torch_dists.rst  scistanpy.model.model.rst  (+21 more)
docs_source/: Makefile  conf.py  index.rst
examples/: demo.ipynb
flip3/: README.md
flipv3/: __init__.py  base_models.py  constants.py  flip_data_analysis.py  flip_dsets.py  k50_models.py  nuclease_models.py  pdz3_models.py  trpb_models.py
rst/: growth_models.md
scistanpy/: __init__.py  custom_types.py  defaults.py  exceptions.py  operations.py  utils.py
(+516 files in other folders)
